# msvc-mingw-build-bug-demo

./: CMakeLists.txt  Readme.md
mingw-lib/: Makefile  mingw-lib.c  mingw-lib.h
msvc-lib/: CMakeLists.txt  msvc-bug1.c  msvc-bug2.c  msvc-bug3.c  msvc-bug4-nobuild.c  msvc-bug5-extrafile.c  msvc-bug5-extrafile.h  msvc-bug5-hack.c  msvc-lib.c  msvc-lib.h
msvc-main/: CMakeLists.txt  msvc-main-hack.c  msvc-main.c
